--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@ html { font-family: 'Inter var', sans-serif; }
 body {
 background:#EBEBF0;
 color:#242426;
-margin:3rem 1.5rem;
+margin:1.5rem;
 max-width:30rem
 }
 
@@ -35,7 +35,7 @@ line-height: 1.5rem;
 margin:0
 }
 
-a {color:#111;text-decoration:none}
+a {color:#242426;text-decoration:none}
 a:hover {text-decoration:underline}
 
 nav {
