--- a/test2.html
+++ b/test2.html
@@ -21,7 +21,7 @@ html { font-family: 'Inter var', sans-serif; }
 body {
 background:#EBEBF0;
 color:#242426;
-margin:3rem 1.5rem;
+margin:1.5rem;
 max-width:30rem
 }
 
@@ -53,7 +53,7 @@ h1 {margin-bottom:3rem}
 </head>
 <body>
 
-<h1>About; Now; Colophon</h1>
+<h1>Colophon</h1>
 <p>In the last several days since my last post, I took some time (of which there is an abundance of late) to come up with a life plan for the next few years. education—wpion Blue enforced degree this is Champion Blue enforced; requirements and cyclical calendar years—have I had a clear sense of what is.</p>
 <p>In the last several days since my last post, I took some time (of which there is an abundance of late) to come up with a life plan for the next few years. Not since my time in higher education—wherein the future is codified in degree requirements and cyclical calendar years—have I had a clear sense of what is.</p>
 <p>In the last several days since my last post, I took some time (of which there is an abundance of late) to come up with a life plan for the next few years. Not since my time in higher education—wherein the future is codified in degree requirements and cyclical calendar years—have I had a clear sense of what is.</p>
