--- a/test2.html
+++ b/test2.html
@@ -19,8 +19,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 html { font-family: 'Inter var', sans-serif; }
 
 body {
-background:#EBEBF0;
-color:#242426;
+background:#eee;
+color:#222;
 margin:1.5rem;
 max-width:30rem
 }
@@ -38,7 +38,7 @@ line-height: 1.5rem;
 margin:0 0 1.5rem
 }
 
-a {color:#0040DD;text-decoration:underline}
+a {color:#15c;text-decoration:underline}
 a:hover {text-decoration:none}
 
 nav {margin:3rem 0 4.5rem}
