--- a/sandbox.html
+++ b/sandbox.html
@@ -40,7 +40,7 @@
 <li><a href=#>Emerging Theoretical Perspectives on Student Experiences and Identities</a></li>
 </ol>
 
-<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
+<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.jl-c.github.io">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
 </p>
 </body>
 </html>
