--- a/sandbox.html
+++ b/sandbox.html
@@ -3,32 +3,32 @@
 <head>
 <title>Page Title</title>
 <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">  
- 
- <style>
- body {color:#212121;font-family:'Literata';margin:0 auto 6rem;max-width:42rem;}
- p {font-size:1.125rem;max-width:42rem;line-height:1.8rem;margin:0 auto 1.125rem}
- h1 {font-size:1.75rem;font-weight:500;margin:6rem auto 3rem}
- li {font-size:1.125rem;line-height:2rem}
- ol {margin-left:0;padding-left:0}
- 
- div {background:#0074D9;color:white;font-family:'Open Sans';max-width:33rem;margin:3rem auto;padding:1.5rem;}
- 
- a {color:#15c;text-decoration:none;border-bottom:1px solid #ddd}
- a:hover {color:#15c;border-bottom:1px solid #15c}
- 
- </style>
+
+<style>
+
+body {color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem;padding:0 2rem}
+h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
+h2 {font-size:1.25rem;font-weight:600;line-height:2rem;margin:2rem auto}
+p {font-size:1.125rem;line-height:2rem;margin:0 auto}
+li {font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem}
+ol {margin-left:0;padding-left:0}
+a:visited{color:#663399}
+a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
+a:hover {color:#15c;border-bottom:1px solid #15c}
+span {display:inline;color:red;text-align:right}
+
+</style>
 </head>
 <body>
 
-<h1>Table of Contents</h1>
-<p><b>What is Student Development Theory?</b></p>
+<h1>Contents</h1>
 <ol>
+    <h2>What is Student Development Theory?</h2>
 <li><a href=#>Introduction</a></li>
 <li><a href=#>Foundations</a></li>
-<li><a href=#>Applications</a></li>
-</ol>
-<p><b>Social Identity Development</b></p>
-<ol>
+<li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Applications</a></li>
+<li><a href=#>The Role of Student Affairs Educators in Using Student Development Theory</a></li>
+    <h2>Social Identity Development</h2>
 <li><a href=#>Overview</a></li>
 <li><a href=#>Racial Identity Development</a></li>
 <li><a href=#>Ethnic Identity Development and Acculturation</a></li>
@@ -38,9 +38,23 @@
 <li><a href=#>Disability Identities and Identity Development</a></li>
 <li><a href=#>Social Class and Identity</a></li>
 <li><a href=#>Emerging Theoretical Perspectives on Student Experiences and Identities</a></li>
+    <h2>Psychosocial, Cognitive-Structural, and Integrative Development</h2>
+<li><a href=#>Psychosocial Identity Development</a></li>
+<li><a href=#>Epistemological and Intellectual Development</a></li>
+<li><a href=#>Moral Development</a></li>
+<li><a href=#>Development of Self-Authorship</a></li>
+    <h2>Critical Theories: The Third Wave</h2>
+<li><a href=#>Critical Race Theory</a></li>
+<li><a href=#>Intersectionality and Student Development</a></li>
+<li><a href=#>(Re)Framing Student Development Using Critical Feminist Theories</a></li>
+<li><a href=#>Indigenous Paradigms</a></li>
+<li><a href=#>Queer Theory</a></li>
+<li><a href=#>Crip Theory</a></li>
+    <h2><a href=#>References</a></h2>
+
 </ol>
 
-<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.jl-c.github.io">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
+<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
 </p>
 </body>
 </html>
