--- a/cover.html
+++ b/cover.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,10 +12,10 @@ body {
 color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem;padding:0 2rem}
 h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
 h2 {font-size:1.25rem;font-weight:600;line-height:2rem;margin:2rem auto}
-p {font-size:1.125rem;line-height:2rem;margin:0 auto 3rem}
-li {list-style:none;font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem}
+p {font-size:1.125rem;line-height:1.75rem;margin:0 auto 3rem}
+li {list-style:none;font-size:1.125rem;line-height:1.75rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem}
 ol {margin-left:0;padding-left:0;margin-bottom:3rem}
-a:visited{color:#663399}
+a:visited{color:#777}
 a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
 a:hover {color:#15c;border-bottom:1px solid #15c}
 span {display:inline;color:red;text-align:right}
@@ -30,7 +31,7 @@ span {display:inline;color:red;text-align:right}
 <li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Author’s Notes</a></li>
 </ol>
 
-<p style=font-size:0.9rem;line-height:1.6rem;color:#777;>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, you can <a href=#>buy Jessy a coffee</a>.
+<p style=margin-top:9rem;font-size:1rem;line-height:1.6rem;color:#777;max>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoy this resource and want to support its  development, you can <a href=#>buy Jessy a coffee</a>.
 </p>
 </body>
 </html>
