--- a/sandbox.html
+++ b/sandbox.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +22,8 @@ span {display:inline;color:red;text-align:right}
 </head>
 <body>
 
-<h1>Contents</h1>
+<h1>Table of Contents</h1>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 <ol>
     <h2>What is Student Development Theory?</h2>
 <li><a href=#>Introduction</a></li>
@@ -51,7 +53,7 @@ span {display:inline;color:red;text-align:right}
 <li><a href=#>Queer Theory</a></li>
 <li><a href=#>Crip Theory</a></li>
     <h2><a href=#>References</a></h2>
-
+    <h2><a href=#>Author’s Notes</a></h2>
 </ol>
 
 <p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
