--- a/sandbox.html
+++ b/sandbox.html
@@ -23,6 +23,7 @@ span {display:inline;color:red;text-align:right}
 <body>
 
 <h1>Table of Contents</h1>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Cover</a></li>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 <ol>
     <h2>What is Student Development Theory?</h2>
