--- a/cover.html
+++ b/cover.html
@@ -30,8 +30,6 @@ span {display:inline;color:red;text-align:right}
 <li><a href=#>Table of Contents</a></li>
 <li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Author’s Notes</a></li>
 </ol>
-
-<p style=margin-top:9rem;font-size:1rem;line-height:1.6rem;color:#777;max>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoy this resource and want to support its  development, you can <a href=#>buy Jessy a coffee</a>.
-</p>
+{% include footer.html %}
 </body>
 </html>
