--- a/notes.html
+++ b/notes.html
@@ -33,7 +33,6 @@ span {display:inline;color:red;text-align:right}
 
 <p>Aliquam mattis risus urna, sit amet consequat libero commodo eget. Vestibulum eu lectus eget sem tristique porta non id neque. Vivamus diam arcu, condimentum vitae lacinia in, rutrum et lorem. Mauris imperdiet, velit condimentum congue imperdiet, mi ligula convallis lectus, pulvinar pretium tellus lorem eget nisi. Curabitur pulvinar convallis velit, sed aliquam ligula mollis non. Mauris luctus non elit et fermentum. Nam commodo tellus quis ante scelerisque consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum mollis nunc ac odio dictum, non tincidunt metus pretium. Aliquam sit amet lorem viverra, egestas lacus vel, sagittis libero. Quisque dignissim ex vitae aliquam sagittis. Sed et eros a lectus iaculis tempor. Vivamus bibendum odio vel auctor pulvinar. Aenean venenatis ut urna non tincidunt. In sed odio eget magna scelerisque dignissim in eu erat.</p>
 
-<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
-</p>
+{% include footer.html %}
 </body>
 </html>
