--- a/sandbox.html
+++ b/sandbox.html
@@ -57,7 +57,6 @@ span {display:inline;color:red;text-align:right}
     <h2><a href=#>Author’s Notes</a></h2>
 </ol>
 
-<p style=font-size:0.9rem;line-height:1.6rem;color:#555;margin-top:6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you enjoyed this resource and want to support its ongoing development, <a href=#>Jessy loves coffee</a>.
-</p>
+{% include footer.html %}
 </body>
 </html>
