--- a/sandbox.html
+++ b/sandbox.html
@@ -1,27 +1,5 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-<link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">  
-
-<style>
-
-body {color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem;padding:0 2rem}
-h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
-h2 {font-size:1.25rem;font-weight:600;line-height:2rem;margin:2rem auto}
-p {font-size:1.125rem;line-height:2rem;margin:0 auto}
-li {font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem}
-ol {margin-left:0;padding-left:0}
-a:visited{color:#663399}
-a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
-a:hover {color:#15c;border-bottom:1px solid #15c}
-span {display:inline;color:red;text-align:right}
-
-</style>
-</head>
-<body>
-
+layout: toc
+---
 <h1>Table of Contents</h1>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Cover</a></li>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
@@ -56,7 +34,3 @@ span {display:inline;color:red;text-align:right}
     <h2><a href=#>References</a></h2>
     <h2><a href=#>Author’s Notes</a></h2>
 </ol>
-
-{% include footer.html %}
-</body>
-</html>
