--- a/notes.html
+++ b/notes.html
@@ -1,27 +1,6 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-<link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">  
-
-<style>
-
-body {color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem;padding:0 2rem}
-h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
-h2 {font-size:1.25rem;font-weight:700;line-height:2rem;margin:2rem auto}
-p {font-size:1.125rem;line-height:1.75rem;margin:0 auto}
-li {font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem}
-ol {margin-left:0;padding-left:0}
-a:visited{color:#663399}
-a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
-a:hover {color:#15c;border-bottom:1px solid #15c}
-span {display:inline;color:red;text-align:right}
-
-</style>
-</head>
-<body>
-
+---
+layout: notes
+---
 <h1>Author’s Notes</h1>
 <p>Notes about the development of studentdevelopment.io. A <a href=#>road map</a> outlines the plan for the resource.</p>
     <h2>June 18, 2020</h2>
@@ -32,7 +11,3 @@ span {display:inline;color:red;text-align:right}
     <h2>June 11, 2020</h2>
 
 <p>Aliquam mattis risus urna, sit amet consequat libero commodo eget. Vestibulum eu lectus eget sem tristique porta non id neque. Vivamus diam arcu, condimentum vitae lacinia in, rutrum et lorem. Mauris imperdiet, velit condimentum congue imperdiet, mi ligula convallis lectus, pulvinar pretium tellus lorem eget nisi. Curabitur pulvinar convallis velit, sed aliquam ligula mollis non. Mauris luctus non elit et fermentum. Nam commodo tellus quis ante scelerisque consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum mollis nunc ac odio dictum, non tincidunt metus pretium. Aliquam sit amet lorem viverra, egestas lacus vel, sagittis libero. Quisque dignissim ex vitae aliquam sagittis. Sed et eros a lectus iaculis tempor. Vivamus bibendum odio vel auctor pulvinar. Aenean venenatis ut urna non tincidunt. In sed odio eget magna scelerisque dignissim in eu erat.</p>
-
-{% include footer.html %}
-</body>
-</html>
