--- a/sandbox.html
+++ b/sandbox.html
@@ -2,7 +2,7 @@
 layout: toc
 ---
 <h1>Table of Contents</h1>
-<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Cover</a></li>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 <ol>
     <h2>What is Student Development Theory?</h2>
