--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,6 @@
 ---
 layout: notes
+title: Author’s Notes
 ---
 <h1>Author’s Notes</h1>
 <p>Notes about the development of studentdevelopment.io. A <a href=#>road map</a> outlines the plan for the resource.</p>
