--- a/sandbox.html
+++ b/sandbox.html
@@ -1,5 +1,6 @@
 ---
 layout: toc
+title: Table of Contents 1
 ---
 <h1>Table of Contents</h1>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
