--- a/notes.html
+++ b/notes.html
@@ -1,14 +1,75 @@
----
-layout: notes
-title: Author’s Notes
----
+<!DOCTYPE html>
+<html lang=en>
+<head>
+<title>Author's Notes</title>
+<meta name=viewport content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+
+body {
+color:#222;
+font-family: 'Literata', serif;
+margin:3rem auto;
+max-width:42rem
+}
+
+h1 {
+display:inline-block;
+font-size:1.75rem;
+font-weight:600;
+line-height:1.8rem;
+margin:calc(5.4rem) 0 1.8rem
+}
+
+h2 {
+border-top:2px solid;
+display:inline-block;
+font-size:1.25rem;
+font-weight:600;
+line-height:1.8rem;
+margin:calc(2.4rem - 2px) 0 1.2rem
+}
+
+p {
+font-size:1.125rem;
+line-height:1.8rem;
+margin:0 0 1.8rem 3rem
+}
+
+a:visited {
+color:#663399
+}
+
+a {
+border-bottom:1px solid #ddd;
+color:#15c;
+text-decoration:none
+}
+
+a:hover {
+border-bottom:1px solid #15c;
+color:#15c;
+}
+
+footer {
+line-height:1.8rem;
+margin:5.4rem 0 7.2rem
+}
+
+</style>
+</head>
+<body>
 <h1>Author’s Notes</h1>
-<p>Notes about the development of studentdevelopment.io. A <a href=#>road map</a> outlines the plan for the resource.</p>
-    <h2>June 18, 2020</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus magna et massa hendrerit convallis. Curabitur suscipit nibh purus, a aliquam leo dignissim sit amet. Vestibulum non ornare erat. Vivamus sit amet facilisis nulla. Nulla pulvinar porttitor enim. Vestibulum eget metus imperdiet, iaculis velit sed, tempor lectus. Aliquam eget lacus et dolor ultrices condimentum. Donec lobortis ornare sem, non posuere dolor. In hac habitasse platea dictumst.</p>
-    <h2>June 14, 2020</h2>
+<p style=margin-left:0;font-size:1.25rem>On developing <a href=#>studentdevelopment.org</a></p>
+<h2>September 14, 2020</h2>
+<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis. Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
+<h2>August 22, 2020</h2>
+<p>Morbi eget aliquet erat, quis blandit augue. Sed volutpat nisl id urna sollicitudin, et dapibus tellus laoreet. Nam tincidunt sodales turpis quis cursus. Cras faucibus, urna eleifend congue accumsan, metus diam sodales augue, at gravida sapien eros non urna. Praesent pretium nunc et lectus sagittis, quis ultricies sem cursus. Donec accumsan pharetra turpis id viverra. Donec aliquet neque eu tincidunt vulputate.</p>
+<h2>August 8, 2020</h2>
+<p>Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
+<h2>July 14, 2020</h2>
+<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p>
 
-<p>Suspendisse ac luctus mi. Aliquam id placerat enim. Aliquam gravida interdum leo, sit amet scelerisque nulla imperdiet sed. Pellentesque ac placerat velit, ac mattis sem. Suspendisse vel neque erat. Praesent placerat egestas elementum. Morbi leo nisl, hendrerit ac turpis eu, pretium ullamcorper nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras quam orci, accumsan nec condimentum in, imperdiet et purus. Proin tempus ex nulla, a consectetur sapien porttitor nec. Aliquam non dictum neque, eget congue metus. Vestibulum non mollis dolor. Sed vehicula, arcu a elementum pretium, metus tortor luctus massa, sed viverra mi magna vitae ipsum. Donec elementum diam vitae ex pulvinar pharetra.</p>
-    <h2>June 11, 2020</h2>
-
-<p>Aliquam mattis risus urna, sit amet consequat libero commodo eget. Vestibulum eu lectus eget sem tristique porta non id neque. Vivamus diam arcu, condimentum vitae lacinia in, rutrum et lorem. Mauris imperdiet, velit condimentum congue imperdiet, mi ligula convallis lectus, pulvinar pretium tellus lorem eget nisi. Curabitur pulvinar convallis velit, sed aliquam ligula mollis non. Mauris luctus non elit et fermentum. Nam commodo tellus quis ante scelerisque consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum mollis nunc ac odio dictum, non tincidunt metus pretium. Aliquam sit amet lorem viverra, egestas lacus vel, sagittis libero. Quisque dignissim ex vitae aliquam sagittis. Sed et eros a lectus iaculis tempor. Vivamus bibendum odio vel auctor pulvinar. Aenean venenatis ut urna non tincidunt. In sed odio eget magna scelerisque dignissim in eu erat.</p>
+<footer>This website is licensed under a <a href=#>Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a href=#>buy Jessy a coffee</a>.</footer>
+</body>
+</html>
