--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-<title>Author's Notes</title>
+<title>Jessy Cheung</title>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
@@ -27,7 +27,7 @@ display:inline-block;
 font-size:1.25rem;
 font-weight:600;
 line-height:1.8rem;
-margin:calc(2.4rem - 2px) 0 1.2rem
+margin:calc(1.2rem - 2px) 0 1.8rem
 }
 
 p {
