--- a/sandbox2.html
+++ b/sandbox2.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,12 +12,12 @@ body {color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem
 h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
 h2 {font-size:1.25rem;font-weight:600;line-height:2rem;margin:2rem auto}
 p {font-size:1.125rem;line-height:2rem;margin:0 auto 0.75rem}
-li {font-size:1.125rem;line-height:1.75rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem;font-weight:500}
+li {font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem;font-weight:500}
 ol {margin-left:0;padding-left:0}
 a:visited{color:#777}
 a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
 a:hover {color:#15c;border-bottom:1px solid #15c}
-span {display:inline;color:red;text-align:right}
+span {display:inline;color:#222;margin-right:0.75rem}
 
 </style>
 </head>
@@ -26,17 +27,19 @@ span {display:inline;color:red;text-align:right}
 <p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 <ol>
     <h2>What is Student Development Theory?</h2>
-<li>Introduction</li>
-<p>1.1&emsp;<a href=#>Introduction nic Identity Development  nic Identity Development </a></p>
-<p><a href=#>1.2 Imperative</a></p>
-<li>Foundations</li>
-<p><a href=#>2.1 Lorem</a></p>
-<p><a href=#>2.2 Ipsum</a></p>
+<li><a href=#>Introduction</a></li>
+<p><span>1.1</span><a href=#>Introduction nic Identity Development  nic Identity Development </a></p>
+<p><span>1.2</span><a href=#>Imperative</a></p>
+<li><a href=#>Foundations</a></li>
+<p><span>2.1</span><a href=#>Lorem</a></p>
+<p><span>2.2</span><a href=#>Ipsum</a></p>
 <li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Applications</a></li>
 <li><a href=#>The Role of Student Affairs Educators in Using Student Development Theory</a></li>
     <h2>Social Identity Development</h2>
 <li><a href=#>Overview</a></li>
 <li><a href=#>Racial Identity Development</a></li>
+<p><span>6.1</span><a href=#>Black Identity</a></p>
+<p><span>6.2</span><a href=#>Asian-American</a></p>
 <li><a href=#>Ethnic Identity Development and Acculturation</a></li>
 <li><a href=#>Sexual Identity Development</a></li>
 <li><a href=#>Gender and Gender Identity Development</a></li>
