--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
 body {
 color:#222;
 font-family: 'Literata', serif;
-margin:3rem auto;
+margin:1.8rem 1.5rem;
 max-width:42rem
 }
 
@@ -18,7 +18,7 @@ display:inline-block;
 font-size:1.75rem;
 font-weight:600;
 line-height:1.8rem;
-margin:calc(5.4rem) 0 1.8rem
+margin:1.8rem auto
 }
 
 h2 {
@@ -27,13 +27,13 @@ display:inline-block;
 font-size:1.25rem;
 font-weight:600;
 line-height:1.8rem;
-margin:calc(1.2rem - 2px) 0 1.8rem
+margin:calc(1.8rem - 2px) 0 1.8rem
 }
 
 p {
 font-size:1.125rem;
 line-height:1.8rem;
-margin:0 0 1.8rem 3rem
+margin:0 0 1.8rem
 }
 
 a:visited {
@@ -53,7 +53,12 @@ color:#15c;
 
 footer {
 line-height:1.8rem;
-margin:5.4rem 0 7.2rem
+margin:3.6rem 0
+}
+
+@media screen and (min-width:42rem){
+body{margin:4.5rem auto}
+p{margin-left:3rem}
 }
 
 </style>
