--- a/notes.html
+++ b/notes.html
@@ -56,8 +56,13 @@ line-height:1.8rem;
 margin:3.6rem 0
 }
 
-@media screen and (min-width:42rem){
-body{margin:4.5rem auto}
+@media screen and (min-width:39rem){
+body{margin:1.8rem 1.5rem}
+p{margin-left:auto;max-width:39rem}
+}
+
+@media screen and (min-width:45rem){
+body{margin:1.8rem auto}
 p{margin-left:3rem}
 }
 
