--- a/notes.html
+++ b/notes.html
@@ -31,8 +31,8 @@ margin:calc(1.8rem - 2px) 0 1.8rem
 }
 
 p {
-font-size:1.125rem;
-line-height:1.8rem;
+font-size:1rem;
+line-height:1.6rem;
 margin:0 0 1.8rem
 }
 
@@ -52,7 +52,7 @@ color:#15c;
 }
 
 footer {
-line-height:1.8rem;
+line-height:1.6rem;
 margin:3.6rem 0
 }
 
@@ -63,13 +63,13 @@ p{margin-left:auto;max-width:39rem}
 
 @media screen and (min-width:45rem){
 body{margin:1.8rem auto}
-p{margin-left:3rem}
+p{font-size:1.125rem;margin-left:3rem}
 }
 
 </style>
 </head>
 <body>
-<h1>Author’s Notes</h1>
+<div><h1>Author’s Notes</h1>
 <p style=margin-left:0;font-size:1.25rem>On developing <a href=#>studentdevelopment.org</a></p>
 <h2>September 14, 2020</h2>
 <p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis. Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
@@ -78,7 +78,7 @@ p{margin-left:3rem}
 <h2>August 8, 2020</h2>
 <p>Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
 <h2>July 14, 2020</h2>
-<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p>
+<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p></div>
 
 <footer>This website is licensed under a <a href=#>Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a href=#>buy Jessy a coffee</a>.</footer>
 </body>
