--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
 body {
 color:#222;
 font-family: 'Literata', serif;
-margin:1.8rem 1.5rem;
+margin:1.5rem 1.5rem;
 max-width:42rem
 }
 
@@ -52,17 +52,21 @@ color:#15c;
 }
 
 footer {
+border:2px solid #e6e6e6;
+border-radius:9px;
 line-height:1.6rem;
-margin:3.6rem 0
+max-width:39rem;
+margin:3.6rem auto;
+padding:1.5rem
 }
 
 @media screen and (min-width:39rem){
-body{margin:1.8rem 1.5rem}
+body{margin:1.8rem 1.5rem 0}
 p{margin-left:auto;max-width:39rem}
 }
 
 @media screen and (min-width:45rem){
-body{margin:1.8rem auto}
+body{margin:1.8rem auto 0}
 p{font-size:1.125rem;margin-left:3rem}
 }
 
@@ -80,6 +84,6 @@ p{font-size:1.125rem;margin-left:3rem}
 <h2>July 14, 2020</h2>
 <p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p></div>
 
-<footer>This website is licensed under a <a href=#>Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a href=#>buy Jessy a coffee</a>.</footer>
+<footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
 </body>
 </html>
