--- a/notes.html
+++ b/notes.html
@@ -18,7 +18,7 @@ display:inline-block;
 font-size:1.75rem;
 font-weight:600;
 line-height:1.8rem;
-margin:3.6rem auto 1.8rem
+margin:1.8rem auto
 }
 
 h2 {
