--- a/notes.html
+++ b/notes.html
@@ -59,7 +59,7 @@ color:#15c;
 }
 
 footer {
-border:2px solid #eee;
+border:2px solid #E6E6E6;
 border-radius:9px;
 line-height:1.6rem;
 max-width:39rem;
