--- a/notes.html
+++ b/notes.html
@@ -73,6 +73,7 @@ p{margin-left:auto}
 
 @media screen and (min-width:45rem){
 body{margin:1.5rem auto 0}
+  h1 {margin-top:3.6rem}
 p{font-size:1.125rem;}
 }
 
