--- a/sandbox.html
+++ b/sandbox.html
@@ -1,19 +1,115 @@
----
-layout: toc
-title: Table of Contents 1
----
+
+
+<!DOCTYPE html>
+<html lang=en>
+<head>
+<title>Jessy Cheung</title>
+<meta name=viewport content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+
+body {
+color:#222;
+font-family: 'Literata', serif;
+margin:1.5rem;
+max-width:42rem
+}
+
+h1 {
+display:inline-block;
+font-size:1.75rem;
+font-weight:600;
+line-height:1.8rem;
+margin:1.8rem auto 3.6rem
+}
+
+h2 {
+font-size:1.25rem;
+font-weight:600;
+line-height:1.8rem;
+margin:1.8rem 0
+}
+
+p {
+font-size:1.125rem;
+line-height:1.8rem;
+margin:0 0 0.9rem;
+max-width:39rem
+}
+
+p.tag {
+font-size:1.2rem;
+line-height:1.8rem;
+margin-left:0;
+}
+
+a:visited {
+color:#663399
+}
+
+a {
+border-bottom:1px solid #ddd;
+color:#15c;
+text-decoration:none
+}
+
+a:hover {
+border-bottom:1px solid #15c;
+color:#15c;
+}
+
+footer {
+border:2px solid #E6E6E6;
+border-radius:9px;
+line-height:1.6rem;
+max-width:39rem;
+margin:5.4rem auto;
+padding:1.5rem
+}
+
+ol {
+margin:1.8rem 0 3.6rem;
+padding:0
+}
+
+li {
+margin-left:-0.5rem;padding-left:0.5rem;
+font-size:1.125rem;
+line-height:1.8rem;
+margin-bottom:0.9rem;
+}
+
+span {margin-right:1rem}
+
+@media screen and (min-width:39rem){
+}
+
+@media screen and (min-width:45rem){
+body{margin:1.5rem auto 0}
+  h1 {margin-top:3.6rem}
+}
+
+</style>
+</head>
+<body>
 <h1>Table of Contents</h1>
-<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
-<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
+<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 <ol>
     <h2>What is Student Development Theory?</h2>
 <li><a href=#>Introduction</a></li>
+<p><span>1.1</span><a href=#>Introduction nic Identity Development  nic Identity Development </a></p>
+<p><span>1.2</span><a href=#>Imperative</a></p>
 <li><a href=#>Foundations</a></li>
+<p><span>2.1</span><a href=#>Lorem</a></p>
+<p><span>2.2</span><a href=#>Ipsum</a></p>
 <li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Applications</a></li>
 <li><a href=#>The Role of Student Affairs Educators in Using Student Development Theory</a></li>
     <h2>Social Identity Development</h2>
 <li><a href=#>Overview</a></li>
 <li><a href=#>Racial Identity Development</a></li>
+<p><span>6.1</span><a href=#>Black Identity</a></p>
+<p><span>6.2</span><a href=#>Asian-American</a></p>
 <li><a href=#>Ethnic Identity Development and Acculturation</a></li>
 <li><a href=#>Sexual Identity Development</a></li>
 <li><a href=#>Gender and Gender Identity Development</a></li>
@@ -36,3 +132,8 @@ title: Table of Contents 1
     <h2><a href=#>References</a></h2>
     <h2><a href=#>Author’s Notes</a></h2>
 </ol>
+</ol>
+</nav>
+<footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
+</body>
+</html>
