--- a/sandbox.html
+++ b/sandbox.html
@@ -59,8 +59,9 @@ color:#15c;
 }
 
 footer {
-border:2px solid #E6E6E6;
-border-radius:9px;
+background:#f6f6f6;
+border:1px solid #ddd;
+border-radius:6px;
 line-height:1.6rem;
 max-width:39rem;
 margin:5.4rem auto;
