--- a/cover2.html
+++ b/cover2.html
@@ -60,14 +60,15 @@ color:#15c;
 }
 
 footer {
-border:2px solid #E6E6E6;
-border-radius:9px;
+background:#f6f6f6;
+border:1px solid #ddd;
+border-radius:6px;
 line-height:1.6rem;
 max-width:39rem;
 margin:5.4rem auto;
 padding:1.5rem
 }
-
+  
 ol {
 list-style:none;
 margin:3.6rem 0;
