--- a/sandbox.html
+++ b/sandbox.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang=en>
 <head>
@@ -14,7 +11,6 @@ color:#222;
 font-family: 'Literata', serif;
 margin:1.5rem;
 max-width:42rem;
-padding:0 1.5rem
 }
 
 h1 {
@@ -22,7 +18,7 @@ display:inline-block;
 font-size:1.75rem;
 font-weight:600;
 line-height:1.8rem;
-margin:1.8rem auto;
+margin:1.8rem auto 1.8rem
 }
 
 h2 {
@@ -66,13 +62,13 @@ border:1px solid #ddd;
 border-radius:6px;
 line-height:1.6rem;
 max-width:39rem;
-margin:5.4rem auto;
+margin:5.4rem 0;
 padding:1.5rem
 }
 
 ol {
-margin:1.8rem 0 3.6rem;
-padding:0
+margin:0rem 0 1.8rem;
+padding:0 0 0 1.5rem
 }
 
 li {
@@ -85,6 +81,7 @@ margin-bottom:0.9rem;
 span {margin-right:1rem}
 
 @media screen and (min-width:42rem){
+footer {margin:5.4rem auto}
 body {margin:1.5rem 1.5rem 0}
 }
 
@@ -97,8 +94,10 @@ body{margin:1.5rem auto 0;padding:0 1.5rem}
 </head>
 <body>
 <h1>Table of Contents</h1>
-<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
-<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+<ol>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+</ol>
 <ol>
     <h2>What is Student Development Theory?</h2>
 <li><a href=#>Introduction</a></li>
