--- a/sandbox.html
+++ b/sandbox.html
@@ -72,7 +72,8 @@ padding:0 0 0 1.5rem
 }
 
 li {
-margin-left:-0.5rem;padding-left:0.5rem;
+margin-left:-0.5rem;
+padding-left:0.5rem;
 font-size:1.125rem;
 line-height:1.8rem;
 margin-bottom:0.9rem;
@@ -81,8 +82,12 @@ margin-bottom:0.9rem;
 span {margin-right:1rem}
 
 @media screen and (min-width:42rem){
-footer {margin:5.4rem auto}
+footer {margin:5.4rem auto;}
 body {margin:1.5rem 1.5rem 0}
+}
+
+@media screen and (min-width:45rem){
+body {margin:1.5rem auto 0}
 }
 
 @media screen and (min-width:48rem){
@@ -103,6 +108,7 @@ body{margin:1.5rem auto 0;padding:0 1.5rem}
 <li><a href=#>Introduction</a></li>
 <p><span>1.1</span><a href=#>Introduction nic Identity Development  nic Identity Development </a></p>
 <p><span>1.2</span><a href=#>Imperative</a></p>
+<div style=display:none>
 <li><a href=#>Foundations</a></li>
 <p><span>2.1</span><a href=#>Lorem</a></p>
 <p><span>2.2</span><a href=#>Ipsum</a></p>
@@ -137,6 +143,7 @@ body{margin:1.5rem auto 0;padding:0 1.5rem}
 </ol>
 </ol>
 </nav>
+</div>
 <footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
 </body>
 </html>
