--- a/sandbox2.html
+++ b/sandbox2.html
@@ -1,35 +1,117 @@
 
 
-<!DOCTYPE html>
-<html>
-<head>
-<title>Table of Contents 2</title>
-<link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">  
 
+<!DOCTYPE html>
+<html lang=en>
+<head>
+<title>Jessy Cheung</title>
+<meta name=viewport content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
 
-body {color:#212121;font-family:'Literata';margin:6rem auto 6rem;max-width:42rem;padding:0 2rem}
-h1 {font-size:1.75rem;font-weight:600;line-height:2rem;margin:0 auto 3rem}
-h2 {font-size:1.25rem;font-weight:600;line-height:2rem;margin:2rem auto}
-p {font-size:1.125rem;line-height:2rem;margin:0 auto 0.75rem}
-li {font-size:1.125rem;line-height:2rem;margin-bottom:0.75rem;margin-left:-0.5rem;padding-left:0.5rem;font-weight:400}
-ol {margin-left:0;padding-left:0}
-a:visited{color:#777}
-a {color:#15c;text-decoration:none;border-bottom:1px solid #ccc}
-a:hover {color:#15c;border-bottom:1px solid #15c}
-span {display:inline;color:#222;margin-right:0.75rem}
+body {
+color:#222;
+font-family: 'Literata', serif;
+margin:1.5rem;
+max-width:42rem;
+}
+
+h1 {
+display:inline-block;
+font-size:1.75rem;
+font-weight:600;
+line-height:1.8rem;
+margin:1.8rem auto 1.8rem
+}
+
+h2 {
+font-size:1.25rem;
+font-weight:600;
+line-height:1.8rem;
+margin:1.8rem 0
+}
+
+p {
+font-size:1.125rem;
+line-height:1.8rem;
+margin:0 0 0.9rem;
+max-width:39rem
+}
+
+p.tag {
+font-size:1.2rem;
+line-height:1.8rem;
+margin-left:0;
+}
+
+a:visited {
+color:#663399
+}
+
+a {
+border-bottom:1px solid #ddd;
+color:#15c;
+text-decoration:none
+}
+
+a:hover {
+border-bottom:1px solid #15c;
+color:#15c;
+}
+
+footer {
+background:#f6f6f6;
+border:1px solid #ddd;
+border-radius:6px;
+line-height:1.6rem;
+max-width:39rem;
+margin:5.4rem 0;
+padding:1.5rem
+}
+
+ol {
+margin:0rem 0 1.8rem;
+padding:0 0 0 1.5rem
+}
+
+li {
+margin-left:-0.25rem;
+padding-left:0.25rem;
+font-size:1.125rem;
+line-height:1.8rem;
+margin-bottom:0.9rem;
+}
+
+span {margin-right:0.75rem}
+
+@media screen and (min-width:42rem){
+footer {margin:5.4rem auto;}
+body {margin:1.5rem 1.5rem 0}
+}
+
+@media screen and (min-width:45rem){
+body {margin:1.5rem auto 0}
+}
+
+@media screen and (min-width:48rem){
+body{margin:1.5rem auto 0;padding:0 1.5rem}
+  h1 {margin-top:3.6rem}
+}
 
 </style>
 </head>
 <body>
 <h1>Table of Contents</h1>
-<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
-<p style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+<ol>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+</ol>
 <ol>
     <h2>What is Student Development Theory?</h2>
 <li><a href=#>Introduction</a></li>
 <p><span>1.1</span><a href=#>Introduction nic Identity Development  nic Identity Development </a></p>
 <p><span>1.2</span><a href=#>Imperative</a></p>
+<div style=display:none>
 <li><a href=#>Foundations</a></li>
 <p><span>2.1</span><a href=#>Lorem</a></p>
 <p><span>2.2</span><a href=#>Ipsum</a></p>
@@ -62,9 +144,9 @@ span {display:inline;color:#222;margin-right:0.75rem}
     <h2><a href=#>References</a></h2>
     <h2><a href=#>Author’s Notes</a></h2>
 </ol>
-
-<p style=margin-top:6rem;font-size:1rem;line-height:1.6rem>This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. It was created and is maintained by <a href="http://www.github.io/jl-c">Jessy Cheung</a>. If you like this resource and want to support its development, you can <a href=#>buy Jessy a coffee</a>.
-</p>
-
+</ol>
+</nav>
+</div>
+<footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
 </body>
 </html>
