--- a/notes.html
+++ b/notes.html
@@ -59,13 +59,12 @@ color:#15c;
 }
 
 footer {
-background:#f6f6f6;
-border:1px solid #ddd;
+border:1px solid #bbb;
 border-radius:6px;
-line-height:1.6rem;
+line-height:1.8rem;
 max-width:39rem;
 margin:5.4rem auto;
-padding:1.5rem
+padding:1.6rem 1.5rem
 }
 
 @media screen and (min-width:39rem){
@@ -76,6 +75,7 @@ p{margin-left:auto}
 body{margin:1.5rem auto 0}
   h1 {margin-top:3.6rem}
 p{font-size:1.125rem;}
+  footer{font-size:1.0625rem}
 }
 
 </style>
