--- a/toc.html
+++ b/toc.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang=en>
 <head>
@@ -60,13 +57,12 @@ color:#15c;
 }
 
 footer {
-background:#f6f6f6;
-border:1px solid #ddd;
+border:1px solid #bbb;
 border-radius:6px;
-line-height:1.6rem;
+line-height:1.8rem;
 max-width:39rem;
-margin:5.4rem 0;
-padding:1.5rem
+margin:5.4rem auto;
+padding:1.6rem 1.5rem
 }
 
 ol {
@@ -91,6 +87,7 @@ body {margin:1.5rem 1.5rem 0}
 
 @media screen and (min-width:45rem){
 body {margin:1.5rem auto 0}
+footer{font-size:1.0625rem}
 }
 
 @media screen and (min-width:48rem){
