--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang=en>
 <head>
@@ -60,13 +59,12 @@ color:#15c;
 }
 
 footer {
-background:#f6f6f6;
-border:1px solid #ddd;
+border:1px solid #bbb;
 border-radius:6px;
-line-height:1.6rem;
+line-height:1.8rem;
 max-width:39rem;
 margin:5.4rem auto;
-padding:1.5rem
+padding:1.6rem 1.5rem
 }
   
 ol {
@@ -89,6 +87,7 @@ p{margin-left:auto}
 body{margin:1.5rem auto 0}
   h1 {margin-top:3.6rem}
 p{font-size:1.125rem;}
+  footer{font-size:1.0625rem}
 }
 
 </style>
@@ -99,8 +98,8 @@ p{font-size:1.125rem;}
 <nav>
 <ol>
 <li><a href=#>Preface</a></li>
-<li><a href=#>Table of Contents</a></li>
-<li><a href=#>Author’s Notes</a></li>
+<li><a href=/toc>Table of Contents</a></li>
+<li><a href=/notes>Author’s Notes</a></li>
 </ol>
 </nav>
 <footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
