--- a/toc.html
+++ b/toc.html
@@ -100,7 +100,7 @@ body{margin:1.5rem auto 0;padding:0 1.5rem}
 <body>
 <h1>Table of Contents</h1>
 <ol>
-<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Title Page</a></li>
+<li style=list-style:none><a href=/main>Title Page</a></li>
 <li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
 </ol>
 <ol>
