--- a/notes.html
+++ b/notes.html
@@ -3,81 +3,26 @@
 <head>
 <title>Author’s Notes</title>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel=stylesheet>
 <style>
-
-body {
-color:#222;
-font-family: 'Literata', serif;
-margin:1.5rem;
-max-width:42rem
-}
-
-h1 {
-display:inline-block;
-font-size:1.75rem;
-font-weight:600;
-line-height:1.8rem;
-margin:1.8rem auto
-}
-
-h2 {
-border-top:2px solid;
-display:inline-block;
-font-size:1.25rem;
-font-weight:600;
-line-height:1.8rem;
-margin:calc(1.8rem - 2px) 0 1.8rem
-}
-
-p {
-font-size:1.0625rem;
-line-height:1.8rem;
-margin:0 0 1.8rem;
-max-width:39rem
-}
-
-p.tag {
-font-size:1.2rem;
-line-height:1.8rem;
-margin-left:0;
-}
-
-a:visited {
-color:#663399
-}
-
-a {
-border-bottom:1px solid #ddd;
-color:#15c;
-text-decoration:none
-}
-
-a:hover {
-border-bottom:1px solid #15c;
-color:#15c;
-}
-
-footer {
-border:1px solid #bbb;
-border-radius:6px;
-line-height:1.8rem;
-max-width:39rem;
-margin:5.4rem auto;
-padding:1.6rem 1.5rem
-}
-
-@media screen and (min-width:39rem){
+body{color:#222;font-family:'Literata',serif;margin:1.5rem;max-width:42rem}
+h1{display:inline-block;font-size:1.75rem;font-weight:600;line-height:1.8rem;margin:1.8rem auto}
+h2{border-top:2px solid;display:inline-block;font-size:1.25rem;font-weight:600;line-height:1.8rem;margin:calc(1.8rem}
+p{font-size:1.0625rem;line-height:1.8rem;margin:0 0 1.8rem;max-width:39rem}
+p.tag{font-size:1.2rem;line-height:1.8rem;margin-left:0}
+a:visited{color:#639}
+a{border-bottom:1px solid #ddd;color:#15c;text-decoration:none}
+a:hover{border-bottom:1px solid #15c;color:#15c}
+footer{border:1px solid #bbb;border-radius:6px;line-height:1.8rem;max-width:39rem;margin:5.4rem auto;padding:1.6rem 1.5rem}
+@media screen and (min-width:39rem) {
 p{margin-left:auto}
 }
-
-@media screen and (min-width:45rem){
+@media screen and (min-width:45rem) {
 body{margin:1.5rem auto 0}
-  h1 {margin-top:3.6rem}
-p{font-size:1.125rem;}
-  footer{font-size:1.0625rem}
-}
-
+h1{margin-top:3.6rem}
+p{font-size:1.125rem}
+footer{font-size:1.0625rem}
+}  
 </style>
 </head>
 <body>
@@ -91,7 +36,6 @@ p{font-size:1.125rem;}
 <p>Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
 <h2>July 14, 2020</h2>
 <p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p></div>
-
 <footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
 </body>
 </html>
